--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "build": "babel src -d lib",
     "test": "jest",
     "test:watch": "yarn test -- --watch",
-    "prepublish": "yarn clean && yarn build"
+    "prepublish": "yarn clean && yarn build",
+    "postinstall": "cd ./node_modules/my-forked-project && npm install && npm run build"
   },
   "keywords": [
     "styled-components",
